/*
 *
 *  Copyright 2018 Expedia, Group.
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 *
 */
syntax = "proto3";
import "spanBuffer.proto";

option java_package = "com.expedia.open.tracing.backend";
option java_multiple_files = true;
option go_package = "haystack";


message StichedSpans {
    string traceId = 1;
    repeated SpanBuffer spanBuffer = 2; // collection of span buffers belonging to a single Trace
}

// query for writing stitched spans to persistent store
message WriteSpansRequest {
    repeated StichedSpans stitchedSpans = 1;
}

// query for reading stitched spans from persistent store
message ReadSpansRequest {
    repeated string traceIds = 1; // trace id of the request
}

message ReadSpansResponse {
    repeated StichedSpans stichedSpans = 1; // collection of span buffers along with their trace id's
}

// An empty message type for rq/rs
message Empty {
}

// service interface to write and read traces
service StorageBackend {
    rpc writeSpans (WriteSpansRequest) returns (Empty); // write buffered spans to backend
    rpc readSpans (ReadSpansRequest) returns (ReadSpansResponse); // read buffered spans from backend
}
