/*
 *
 *  Copyright 2017 Expedia, Inc.
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 *
 */
syntax = "proto3";

option java_package = "com.expedia.open.tracing";
option java_multiple_files = true;


// Span represents a unit of work performed by a service.
message Span {

    string traceId             = 1;        // unique trace id
    string spanId              = 2;        // unique span id
    string parentSpanId        = 3;        // optional, a span can have its parent spanId
    string operationName       = 4;        // name of operation

    int64 startTime            = 5;        // creation time of this span in milliseconds from epoch
    int64 duration             = 6;        // span duration in milliseconds

    repeated Log logs          = 7;        // arbitrary set of timestamp-aware key-value pairs
    repeated Tag tags          = 8;        // arbitrary set of key-value pairs
    Process process            = 9;        // process information for instance serviceName
}


// Log is a timestamped event with a set of tags.
message Log {
  int64 timestamp              = 1;
  repeated Tag fields          = 2;
}


// Tag is a strongly typed key/value pair. We use 'oneof' protobuf attribute to represent the possible tagTypes
message Tag {

  // TagType denotes the type of a Tag's value.
  enum TagType {
    STRING = 0;
    DOUBLE = 1;
    BOOL   = 2;
    LONG   = 3;
    BINARY = 4;
  }
  string key                  = 1;          // name of the tag key
  TagType type                = 2;          // type of tag, namely string, double, bool, long and binary
  oneof myvalue {
      string vStr             = 3;          // string value type
      int64 vLong             = 4;          // long value type
      double vDouble          = 5;          // double value type
      bool vBool              = 6;          // bool value type
      bytes vBytes            = 7;          // byte array value type
  }
}

// Process(or Service) that emits spans
message Process {
  string serviceName          = 1;          // process/service name
  repeated Tag tags           = 2;          // arbitrary set of key-value pairs associated with this process/service
}


// You can optionally use Batch to send a collection of spans. Spans may not necessarily belong to one traceId.
message Batch {
   repeated Span spans        = 1;          // a collection of spans emitted from the process/service
}
